examples/test/testpolicy5434.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5434
  namespace: namespace201
spec:
  podSelector:
    matchLabels:
      key44: value24
      key23: value31
      key27: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value13
      podSelector:
        matchLabels:
          key34: value36
          key24: value47
